# server/routes/userRoutes.js
@@ -1,6 +1,10 @@
 const UserController = require("../controllers/UserController");
 
 module.exports = (app) =>{
+    app.get('/', (req, res) =>{
+        res.status(200).send('Bem Vindo ao Teste FullstackJS Junior')
+    })
+
     app.get('/api/v1/users', (req, res) =>{
         UserController.getUsersAll(req, res);
     });
